--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
       // Arahkan ke halaman Home (simulasi)
       alert(`Data berhasil dicatat:\nNama: ${name}\nNomor Pegawai: ${employeeId}`);
-      window.location.href = "home.html"; // Ubah ke URL halaman Home Anda
+      window.location.href = "Home.html"; // Ubah ke URL halaman Home Anda
     }
   </script>
 <footer>
