--- a/tabel.html
+++ b/tabel.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <header>
-        <img src="EVOTY.png" alt="Company Logo"> 
+        <a href="Home.html">img src="EVOTY.png" alt="Company Logo"</a>
     </header>
     <main>
         <div class="search-container">
