--- a/maintenance.html
+++ b/maintenance.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <header>
-        <img src="EVOTY.png" alt="Company Logo"> 
+        <a href="Home.html"><img src="EVOTY.png" alt="Company Logo"></a> 
     </header>
     <main>
         <h1>Under Development</h1>
