--- a/Home.html
+++ b/Home.html
@@ -9,74 +9,105 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
         }
 
         .header {
             text-align: center;
-            padding: 15px 0;
-            background-color: #1E90FF; /* Optional: Background color for header section */
+            padding: 20px 0;
+            background: rgba(30, 144, 255, 0.85); /* Transparent blue */
+            color: #FFFFFF;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .header h1 {
-            font-size: 2rem;
-            color: #FFFFFF;
+            font-size: 2.5rem;
             margin: 0;
+            font-weight: bold;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
 
         .container {
-            margin-top: 30px; /* Space between header and main content */
+            margin: 40px auto;
+            max-width: 1200px;
             text-align: center;
         }
 
         .card-container {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
-            flex-wrap: wrap;
-            margin-top: 20px;
+            padding: 0 20px;
         }
 
         .card {
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            width: 300px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
             overflow: hidden;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
         }
 
         .card img {
             width: 100%;
-            height: auto;
+            height: 200px;
+            object-fit: cover;
         }
 
         .card h2 {
-            font-size: 1.5rem;
-            margin: 10px 0;
+            font-size: 1.8rem;
+            margin: 15px 0;
         }
 
         .btn {
             display: inline-block;
             margin: 10px 0 20px;
-            padding: 10px 20px;
+            padding: 12px 25px;
             background-color: #007BFF;
             color: white;
             text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
+            border-radius: 6px;
+            font-size: 1rem;
+            font-weight: bold;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         .btn:hover {
             background-color: #0056b3;
+            transform: scale(1.05);
         }
-	footer {
-            background-color: #1E90FF;
-            color: black;
+
+        footer {
+            background: linear-gradient(90deg, #1E90FF, #00BFFF);
+            color: white;
             text-align: center;
-            padding: 1px;
+            padding: 15px 0;
             position: fixed;
-            bottom: 0.5;
+            bottom: 0;
             width: 100%;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 1rem;
+        }
+
+        @media (max-width: 600px) {
+            .header h1 {
+                font-size: 2rem;
+            }
+
+            .card img {
+                height: 150px;
+            }
         }
     </style>
 </head>
@@ -106,9 +137,5 @@
             </div>
         </div>
     </div>
-<footer>
-        <p></p>
-    </footer>
-
 </body>
 </html>
