--- a/WI/PROSES PUT AWAY LOKASI.html
+++ b/WI/PROSES PUT AWAY LOKASI.html
@@ -96,7 +96,7 @@
 <body>
     <!-- Header -->
     <header>
-        <img src="../EVOTY.png" alt="Company Logo">
+         <a href="Home.html"><img src="../EVOTY.png" alt="Company Logo"></a>
     </header>
 
     <!-- Main Content -->
