Update Proses Inbound & Outbound Confirm PTBS (PLB Warehouse).html
..

--- a/WI/Proses Inbound & Outbound Confirm PTBS (PLB Warehouse).html
+++ b/WI/Proses Inbound & Outbound Confirm PTBS (PLB Warehouse).html
@@ -98,7 +98,7 @@
 <body>
     <!-- Header -->
     <header>
-         <a href="Home.html"><img src="../EVOTY.png" alt="Company Logo"></a>
+         <a href="../Home.html"><img src="../EVOTY.png" alt="Company Logo"></a>
     </header>
 
     <!-- Main Content -->
