--- a/Home.html
+++ b/Home.html
@@ -128,7 +128,7 @@
             <div class="card">
                 <img src="images/video.jpg" alt="Video Work Instruction">
                 <h2>Video Work Instruction</h2>
-                <a href="maintenance.html" class="btn">View</a>
+                <a href="videoWI.html" class="btn">View</a>
             </div>
             <div class="card">
                 <img src="images/rules-company.jpg" alt="Company Work Regulations">
